# ce2fs

./: README.md  ce2fs.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
src/ce2fs/: __init__.py  __main__.py
